# zeroMQTestTask

./: .client.cpp.kate-swp  CMakeList.txt  CMakeLists.txt  READ.md  README.md  client.cpp  client.h  main.cpp  mainFile  mainFile.cpp  server.cpp  server.h  service.pb.cc  service.pb.h  service.proto  text.pb.cc  text.pb.h  text.proto
headers/: server.h
hedders/: client.h  server.h
src/: CMakeLists.txt  client.cpp  server.cpp
